💬 coming soon message

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <div id="app"></div>
+    <h2>Next generation</h2>
+    <p>Something really cool is coming!</p>
     <noscript>Your browser doesn't support JavaScript</noscript>
   </body>
 </html>
