--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link href="./styles.css" type="text/css" rel="stylesheet" />
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MNV8PJ5J');</script>
   </head>
   <body class="bg-navy-blue text-white">
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MNV8PJ5J"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <header class="relative w-full overflow-hidden">
       <nav class="absolute top-0 left-0 w-full z-30 bg-transparent py-4">
         <div class="max-w-7xl mx-auto px-4">
